--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,20 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# virtual environments
+venv/
+env/
+
+# Pycharm, VS Code
+.idea/
+.vscode/
+
+# Python
+*.py[cod]
+*.pyo
+*.pyd
+__pycache__/
+
+# Jupyter
+.ipynb_checkpoints
